[package]
name = "sap-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.0", features = ["concolor"] }
num = "0.4.3"
pest = "2.7.15"
pest_derive = "2.7.15"
from-pest = "0.3"
pest-ast = "0.3.5"
serde = { version = "1.0.217", features = ["derive"] }
regex = "1.11.1"
